<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:title="@string/toolbar_main_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tw_currency" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="1.0">
        </androidx.appcompat.widget.Toolbar>

        <TextView
                android:id="@+id/tw_name"
                android:text="@string/country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbarDetails"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/toolbarDetails"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintVertical_bias="0.00999999"
                app:layout_constraintHorizontal_bias="0.04"/>

        <TextView
                android:text="@string/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tw_currency"
                app:layout_constraintTop_toBottomOf="@+id/tw_name"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                tools:layout_editor_absoluteY="56dp" app:layout_constraintStart_toStartOf="@+id/tw_name"
        />
        <TextView
                android:text="@string/languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tw_languages"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tw_currency"
                tools:layout_editor_absoluteY="56dp" app:layout_constraintStart_toStartOf="@+id/tw_currency"
        />
        <TextView
                android:text="@string/near_countries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tw_near_countries"
                app:layout_constraintTop_toBottomOf="@+id/tw_languages"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                tools:layout_editor_absoluteY="56dp" app:layout_constraintStart_toStartOf="@+id/tw_languages"
        />



</androidx.constraintlayout.widget.ConstraintLayout>